# my-chess-tutor

./: .gitignore  board_renderer.py  config.py  engine.py  fetcher.py  main.py  models.py  pyproject.toml  reviewer.py  storage.py
.github/workflows/: ci.yml
templates/: system.j2  user.j2
tests/: conftest.py  test_board_renderer.py  test_config.py  test_engine.py  test_fetcher.py  test_models.py  test_reviewer.py
