[project]
name = "my-chess-tutor"
version = "0.1.0"
description = "A personal chess tutor: Stockfish analysis + human-friendly game reviews."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chess>=1.11.0",
    "jinja2>=3.1.0",
    "openrouter>=0.8.0",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "stockfish>=3.28.0",
    "typer>=0.24.1",
]

[project.scripts]
chess-tutor = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
artifacts = ["templates/"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "types-requests>=2.32.0",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-describe>=2.2.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["it_*", "test_*"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true          # chess / stockfish / openrouter have no stubs
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
# Exclude generated / venv paths
exclude = ["^\\.venv/", "^build/"]

[[tool.mypy.overrides]]
# Test helpers use untyped describe_*/it_* functions by design
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# bandit  (SAST)
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = [".venv", "tests"]
# B101 assert_used — only relevant in test code (already excluded above)
skips = ["B101"]
